tests/parsing/smtlib/v2.6/errors/122_sort_app_empty_args_1.expected
File "tests/parsing/smtlib/v2.6/errors/122_sort_app_empty_args_1.smt2", line 2, character 26-27:
2 | (declare-const foo (array _))
                              ^
Error while parsing a sort, read the reserved word '_',
      but expected a sort to start a non-empty list of arguments.
